0.99.0 UNRELEASED

BUG FIXES

   * Guard setup() call when not loaded as __main__. (Robert Collins)

   * Ignore gnomekeyring.IOError when checking if credentials are available 
     in the GNOME keyring. (Jelmer Vernooij, #534326)

   * Don't crash when there is already a lan-notify instance running.
     (Jelmer Vernooij, #339284)

FEATURES

  * Add 'glog' as an alias for visualize (aka viz) as too many
    people are still confused.
    (Vincent Ladeuil)

  * Add support for Indicator Application (Sense Hofstede, Jelmer Vernooij,
    #518179)

  * Add more tooltips to Olive. (Adrian Room, #333876)

0.98.0 2010-02-24

BUG FIXES

  * Fix relative import in olive menu.
    (Mathias Brodala, #269883)

  * Fix typo in checkout dialog.
    (Jasper Groenewegen, #466507)

  * Adds help for ginit and gtags.
    (Andrew Starr-Bochicchio, #512701)

0.97.0 2009-08-25

BUG FIXES

  * Avoid GnomeKeyringCredentialStore traceback on Ubuntu Hardy
    by being more tolerant about gobject methods availability.
    (Vincent Ladeuil, #403430)
  
  * Fixed emblem and nautilus bzr-status column for ignored files.
    (Lucas Shrewsbury, #294632)
    
  * Fixed emblem and nautilus bzr-status column for unversioned files.
    (Lucas Shrewsbury, #417966)

  * Switch to using disutils sdist instead of bzr export.
    (Mark Lee, #398242)

0.96.2	2009-07-08

 BUG FIXES

  * Same player shoots again. Version credits.pickle and rebuild the tarball
    after running 'python ./setup.py build_credits', update
    http://bazaar-vcs.org/bzr-gtk/releasing accordingly.  
    (Vincent Ladeuil, #397526)
 
0.96.1	2009-07-08

 BUG FIXES
 
  * Rebuild the tarball after running 'python ./setup.py build_credits',
    update http://bazaar-vcs.org/bzr-gtk/releasing accordingly.
   (Vincent Ladeuil, #397526)
 

0.96.0	2009-07-08

 UI
 
  * Add colored status messages in Olive file list (Jasper Groenewegen)

  * Use the new progress bar implementation from bzrlib.
   (Vincent Ladeuil, 385191)

 CHANGES
 